# pyproject.toml — livespec dev tooling configuration.
#
# The authoritative source for every rule expressed here is the
# live specification at `SPECIFICATION/`. In particular:
#   - `SPECIFICATION/constraints.md` §"End-user runtime dependencies"
#     and §"Vendored-library discipline" govern the dependency policy
#     (uv-managed dev deps; vendored runtime libs).
#   - `SPECIFICATION/constraints.md` §"Typechecker constraints"
#     and §"Linter and formatter" govern pyright + ruff configuration.
#   - `SPECIFICATION/constraints.md` §"Code coverage" governs the
#     100% line+branch threshold.
#   - `SPECIFICATION/constraints.md` §"Import-Linter contracts"
#     governs the layered-architecture and pure-layer contracts.
#
# NO [build-system] section: livespec is not a published PyPI
# package; it ships via Claude Code plugin bundling.

[project]
name = "livespec"
version = "0.0.0"
requires-python = ">=3.10.16,<3.11"

# Per v024: NO [project.dependencies] table. livespec ships nothing
# as a runtime dep — the bundle's _vendor/ tree IS the runtime
#. End users install nothing beyond Python 3.10+.

[dependency-groups]
# Per v024: every Python dev tool is uv-managed via this table
# (resolved into uv.lock; installed into a project-local .venv via
# `uv sync --all-groups`). Mise pins only the non-Python binaries
# in .mise.toml. typing_extensions is intentionally NOT here: it
# is vendored at scripts/_vendor/typing_extensions/ per v013 M1.
dev = [
    "ruff==0.8.6",
    "pyright==1.1.391",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "pytest-icdiff==0.9",
    "pytest-xdist==3.8.0",
    "hypothesis==6.122.3",
    "hypothesis-jsonschema==0.23.1",
    "mutmut==3.2.3",
    "import-linter==2.1",
    "copier==9.6.0",
    "livespec-dev-tooling",
    "livespec-runtime",
    # claude-agent-sdk is consumed by tests/e2e/real_claude.py per
    # SPECIFICATION/contracts.md §"E2E harness contract §"Harness
    # mode selection" (the `real` tier). Dev-only — the shipped
    # plugin runtime carries nothing from this package. The SDK
    # itself shells out to the `@anthropic-ai/claude-code` CLI,
    # which the e2e-real workflow installs separately via npm.
    "claude-agent-sdk==0.2.87",
]

# livespec-dev-tooling is consumed from the github.com sibling-library
# repo via uv git source per
# SPECIFICATION/contracts.md §"Shared code sync — livespec-dev-tooling".
# The library's semver-stable surface is the python -m
# livespec_dev_tooling.checks.<slug> invocation set (each slug's argv
# contract and exit-code semantics) plus the composite Actions and
# reusable workflows under its .github/. Bump-pin PRs against this
# repo land each new tag per SPECIFICATION/contracts.md §"Cross-repo
# coordination — pin-and-bump".
#
# livespec-runtime is the shared runtime sibling library
# (livespec_runtime.cross_repo package). Doctor's cross-boundary
# invariants `no-orphan-dependency` and `no-stalled-epic` import the
# typed DependsOnEntry union and resolve_ref per
# SPECIFICATION/contracts.md §"`livespec_runtime.cross_repo` contract
# surface". Bump-pin PRs follow the same shape as livespec-dev-tooling.
[tool.uv.sources]
livespec-dev-tooling = { git = "https://github.com/thewoolleyman/livespec-dev-tooling.git", tag = "v0.35.0" }
livespec-runtime = { git = "https://github.com/thewoolleyman/livespec-runtime.git", tag = "v0.9.2" }

# ---------------------------------------------------------------------------
# livespec-dev-tooling — shared-suite configuration (epic li-scetier).
# ---------------------------------------------------------------------------
#
# `scenario_tiers` is the allowlist the shared `check-heading-coverage`
# (livespec-dev-tooling v0.9.0 Phase 1) enforces against every
# scenarios.md entry: each scenario heading MUST map to a test whose
# dotted module path begins with one of these integration-tier prefixes
# (scenarios describe end-to-end behavior, so unit-tier pointers are
# rejected). Authority: SPECIFICATION/scenarios.md §"Granular scenario
# coverage" (v098, epic li-scetier). `tests.bin` is included
# deliberately — livespec's one tests.bin scenario entry is the phase-3
# round-trip/integration test, legitimately integration-tier.
#
# `destructive_cli_allowlist` is the path-prefix exemption list for the
# shared `check-no-direct-destructive-cli` (livespec-dev-tooling
# v0.11.0): entries DOCUMENT destructive-default CLI behavior rather
# than instructing an agent to invoke one. Authority:
# SPECIFICATION/non-functional-requirements.md §"Destructive-default
# CLI wrapping".
[tool.livespec_dev_tooling]
scenario_tiers = ["tests.e2e", "tests.prompts", "tests.integration", "tests.consumer", "tests.bin"]
destructive_cli_allowlist = []
# Repo-root-relative path prefixes the `tests_no_subprocess_spawn` check
# (canonical, added in livespec-dev-tooling v0.14.1) exempts from its
# test-spawned-Python-subprocess scan. Every entry genuinely needs a real
# subprocess: each drives a check/CLI module as a binary to assert its
# exit-code + stderr contract (the `__main__`-guard / CLI-invocation
# behavior), which cannot be exercised in-process. Hardening these child
# envs to scrub COVERAGE_PROCESS_START / COV_CORE_* (the docstring's
# stronger discipline the gate does not enforce) is tracked as a separate
# follow-up.
subprocess_spawn_allowlist = [
    "tests/dev-tooling/checks/test_behavior_scenario_link.py",
    "tests/dev-tooling/checks/test_canonical_slugs_projection.py",
    "tests/dev-tooling/checks/test_codex_adapter_sync.py",
    "tests/dev-tooling/checks/test_comment_no_historical_refs.py",
    "tests/dev-tooling/checks/test_copier_template_smoke.py",
    "tests/dev-tooling/checks/test_schema_dataclass_pairing.py",
    "tests/e2e/test_doctor_fail_then_fix.py",
]

# ---------------------------------------------------------------------------
# Ruff — sole linter, formatter, import-sorter, complexity checker.
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py310"
line-length = 100
# Vendored third-party libraries are exempt from livespec's own style
# rules per python-skill-script-style-requirements.md line 294-296.
# `__pycache__/` mirrors `[tool.pyright].exclude`. `.claude/hooks/**`
# holds Claude Code agent-runtime hook scripts (e.g. the git footgun
# guard) whose contract is to emit JSON on stdout and fail open — they
# are agent-runtime infra, not livespec product/dev-tooling Python, so
# they are out of scope for livespec's own style rules (mirrors how the
# Driver's `.sh` hooks are not linted). pyright already scopes them out
# via `[tool.pyright].include`.
extend-exclude = ["**/_vendor/**", "**/__pycache__/**", "mutants/**", ".claude/hooks/**"]

[tool.ruff.lint]
# 27 categories total. v011 baseline (11) + v012 additions (16).
# Per python-skill-script-style-requirements.md §"Linter and
# formatter".
select = [
    # ----- v011 baseline (11 categories) -----
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
    "C90",   # mccabe complexity
    "N",     # pep8-naming
    "RUF",   # ruff-specific
    "PL",    # pylint
    "PTH",   # flake8-use-pathlib
    # ----- v012 additions (16 categories) -----
    "TRY",   # tryceratops — pairs with v011 K10 domain-vs-bugs split
    "FBT",   # flake8-boolean-trap — reinforces K4 keyword-only discipline
    "PIE",   # flake8-pie — miscellaneous anti-patterns
    "SLF",   # flake8-self — bans cross-class _-prefixed access
    "LOG",   # flake8-logging — logging discipline
    "G",     # flake8-logging-format — kwargs-only in log calls
    "TID",   # flake8-tidy-imports — no relative imports + banned-imports
    "ERA",   # eradicate — bans commented-out code (LLM artifact)
    "ARG",   # flake8-unused-arguments
    "RSE",   # flake8-raise — `raise X` over `raise X()`; raise...from discipline
    "PT",    # flake8-pytest-style
    "FURB",  # refurb — modern-Python refactor hints
    "SLOT",  # flake8-slots
    "ISC",   # flake8-implicit-str-concat — complements pyright's diagnostic
    # ISC001 (implicit-str-concat on one line) conflicts with the
    # ruff formatter — the formatter emits `f"..." f"..."` when
    # joining wraps; ISC001 then flags the result. Disabled per
    # ruff's documented formatter-conflict guidance. ISC002 and
    # ISC003 stay active to flag genuine multi-line concats.
    "T20",   # flake8-print — bans print/pprint (pairs with check-no-write-direct)
    "S",     # flake8-bandit — security anti-patterns
]
ignore = [
    "ISC001",  # implicit-str-concat on one line; conflicts with the formatter
    # PLC0414 (useless-import-alias) conflicts with the explicit
    # `<name> as <name>` re-export pattern that pyright (and mypy /
    # PEP 484) recognize as the canonical way to declare an
    # intentional cross-module re-export. The project uses this
    # pattern in `livespec/commands/revise.py` to expose private
    # sibling-helper symbols on the supervisor module surface for
    # paired test access without falling back to `# noqa: F401`
    # (which pyright does not honor for reportUnusedImport).
    "PLC0414",
]

[tool.ruff.lint.pylint]
max-args = 6
max-positional-args = 6
max-branches = 10
max-statements = 30

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"abc.ABC" = { msg = "use typing.Protocol; see python-skill-script-style-requirements.md §'Type safety — Inheritance and structural typing'" }
"abc.ABCMeta" = { msg = "use typing.Protocol; see python-skill-script-style-requirements.md §'Type safety — Inheritance and structural typing'" }
"abc.abstractmethod" = { msg = "use typing.Protocol; see python-skill-script-style-requirements.md §'Type safety — Inheritance and structural typing'" }
"pickle" = { msg = "arbitrary-code-execution surface on load(); livespec uses JSON / JSONC for all serialization" }
"marshal" = { msg = "arbitrary-code-execution surface on load(); livespec uses JSON / JSONC for all serialization" }
"shelve" = { msg = "arbitrary-code-execution surface on load(); livespec uses JSON / JSONC for all serialization" }

[tool.ruff.lint.per-file-ignores]
# Shebang-wrapper contract (python-skill-script-style-requirements.md
# lines 1664-1668) mandates exactly: shebang → docstring → `from
# _bootstrap import bootstrap` → `bootstrap()` → `from livespec.<...>
# import main` → `raise SystemExit(main())`. The post-`bootstrap()`
# import structurally violates I001 (un-sorted imports) and E402
# (module-level import not at top); the docstring's
# `Shebang wrapper for <name>. No logic; see livespec.<...> for
# implementation.` template overflows 100 chars for longer module
# names (E501). All three are spec-mandated patterns, exempted only
# for the wrapper subtree.
".claude-plugin/scripts/bin/*.py" = ["I001", "E402", "E501"]
# `_bootstrap.py` carries the canonical Python-version check per
# python-skill-script-style-requirements.md lines 1697-1700:
# `if sys.version_info < (3, 10): raise SystemExit(127)`. UP036
# would mark this dead code because target-version = "py310", but
# the check is the bootstrap mechanism itself — it MUST remain.
".claude-plugin/scripts/bin/_bootstrap.py" = ["UP036"]
# v013 M5 mandates a flat one-level LivespecError hierarchy
# (UsageError, PreconditionError, ValidationError, etc. all
# subclass LivespecError directly; further subclassing forbidden).
# `LivespecError` raise-sites are restricted to `livespec/io/**`
# (check-no-raise-outside-io). Domain-meaningful messages MUST
# embed runtime context (which path/value/operation failed), so
# the messages are constructed at the raise-site as f-strings:
# `raise PreconditionError(f"file not found: {path}")`. TRY003
# (tryceratops: "Avoid specifying long messages outside the
# exception class") would force per-context exception subclasses,
# which v013 M5 forbids. Per-file-ignore scoped to the only place
# LivespecError is raised.
".claude-plugin/scripts/livespec/io/**.py" = ["TRY003"]
# pytest convention: tests use bare `assert` for assertions.
# S101 (flake8-bandit "use of assert detected") flags every test;
# the discipline applies to shipped code, not test-time assertions.
# PLR2004 (pylint "magic value used in comparison") flags fixture-
# integral literals like `assert len(value.files) == 2`; in tests
# the literal IS the fixture's expected value, so extracting to a
# named constant adds noise without value. Standard Python testing
# convention is to allow magic values in test assertions.
# S603 / S607 (flake8-bandit "untrusted-input subprocess") flag
# every `subprocess.run(...)` call in tests. Integration tests
# shell out to git, python, etc. with fixed argv lists; the
# patterns are documented at the call site. PT018 (pytest-style
# "composite assertion") flags `assert x and y` patterns; for
# tests, single-statement composite assertions are idiomatic.
# S108 (/tmp use) flags Path("/tmp/...") in fixtures; pytest's
# tmp_path is preferred but explicit /tmp is sometimes needed.
# Tests carveout (rationale per category):
# - S101: bare assert is the pytest convention
# - PLR2004: magic literals in assertions are integral to fixtures
# - S603/S607: subprocess.run with fixed argv shells out to
#   git/python in integration tests
# - PT018: composite assertions are idiomatic
# - S108: explicit /tmp paths are sometimes needed in fixtures
# - S105: variable names ending in "token" trigger the
#   password heuristic (e.g. `expected_token`); zero real
#   credentials live in tests
# - TRY003: `raise AssertionError(f"...long message...")` is the
#   canonical pytest failure-context pattern
# - E501: test module docstrings carry descriptive titles like
#   "Outside-in test for `dev-tooling/checks/<name>.py` — <desc>"
#   which routinely exceed 100 chars; the 100-char ceiling is
#   over-strict for documentation
"tests/**.py" = [
    "S101", "PLR2004", "S603", "S607", "PT018", "S108", "S105", "TRY003", "E501",
]
# dev-tooling/checks/ scripts shell out to git, ruff, python via
# subprocess.run with fixed argv lists per the canonical-target
# invocation contract. S603/S607/S404 are over-strict for this
# documented pattern; the inline-noqa rationales were adding
# noise. S105 covers TRAILER-token constants whose names trip
# the password heuristic.
"dev-tooling/checks/*.py" = ["S603", "S607", "S404", "S105"]
# reap_stale_worktrees.py is the orchestrator's worktree-reaper
# action tool; it shells out to git via subprocess.run with fixed
# argv lists. Same S603/S607/S404 carve-out shape as the peer
# mutating tool above.
"dev-tooling/reap_stale_worktrees.py" = ["S603", "S607", "S404"]

# ---------------------------------------------------------------------------
# Pyright — strict + seven strict-plus diagnostics + returns plugin.
# ---------------------------------------------------------------------------

[tool.pyright]
include = [".claude-plugin/scripts", "dev-tooling"]
exclude = ["**/_vendor/**", "**/__pycache__/**", "**/_stubs/**"]
extraPaths = [".claude-plugin/scripts", ".claude-plugin/scripts/_vendor"]
stubPath = ".claude-plugin/scripts/_stubs"
pythonVersion = "3.10"
typeCheckingMode = "strict"

# Seven strict-plus diagnostics (v012 L1 + L2). Each closes a
# documented LLM-authored-code failure pattern with a one-line
# config change. See python-skill-script-style-requirements.md
# §"Type safety" for per-diagnostic rationale.
reportUnusedCallResult = "error"
reportImplicitOverride = "error"
reportUninitializedInstanceVariable = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryIsInstance = "error"
# Relaxed from "error" to "warning" (li-xxjopf Step 3a): the 20
# in-tree sites are all readable multi-line f-string assembly in
# error messages where the formatter-driven wrapping is intentional.
# The genuine typo-risk subset (single-line implicit concat) is
# already covered by ruff's ISC category — ISC001 is off only due to
# formatter conflict, ISC002/ISC003 remain active.
reportImplicitStringConcatenation = "warning"

# Disabled (li-xxjopf Step 3b): the project's privacy model is
# package-private, not module-private. Underscore-prefixed helpers
# in `livespec/commands/_*.py` modules (e.g. `_revise_helpers`,
# `_revise_railway_emits`) exist precisely to be imported by their
# sibling top-level command modules (e.g. `revise.py`) — that is
# the documented modularization pattern for keeping each top-level
# command file under the 250-LLOC ceiling. Pyright's strict-mode
# default treats `_x` as module-private, conflicting with this
# convention and producing exclusively false positives on intentional
# same-package access. Cross-class private access is independently
# enforced by ruff's SLF rule (selected above).
reportPrivateUsage = "none"

# NO pluginPaths entry: per v025 D1, pyright has no plugin
# system (microsoft/pyright#607: maintainer rejected plugin
# support in 2020, formalized 2021, reaffirmed 2024) and no
# `returns_pyright_plugin` exists upstream (dry-python/returns
# ships mypy/pytest/hypothesis plugins but not pyright; issue
# dry-python/returns#1513 closed 2022 explicitly stating
# pyright support is not possible). The v018 Q4 closure of
# `returns-pyright-plugin-disposition` was rescinded and
# re-closed in v025 with the revised disposition: no plugin
# vendored. The seven strict-plus diagnostics above remain the
# load-bearing guardrails against silent Result / IOResult
# discards. Pyright still type-checks Result[T, E] generic
# parameters via standard generic inference; flow-narrowing
# through bind chains is lossier than under mypy-with-plugin,
# requiring occasional explicit annotations or cast() calls
# at combinator boundaries. Unnecessary casts get caught by
# reportUnnecessaryCast (above) so the friction surfaces at
# call sites rather than hiding in opaque type-ignores.

# ---------------------------------------------------------------------------
# Pytest — pytest-cov + pytest-icdiff wiring.
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
# `_bootstrap.bootstrap()` sets up sys.path at runtime for the
# shebang wrappers (adds .claude-plugin/scripts and
# .claude-plugin/scripts/_vendor). Pytest needs the same paths
# during collection so `import livespec` and the vendored libs
# resolve. The wrapper-coverage tests under tests/bin/ stub
# these imports via sys.modules and don't depend on pythonpath;
# everything else does.
pythonpath = [
    ".claude-plugin/scripts",
    ".claude-plugin/scripts/_vendor",
]
# pytest-icdiff is auto-loaded via its entry_points.txt (registers
# as the `icdiff` pytest11 plugin) and produces nicer diffs by
# default; no `--icdiff` flag is needed (the plugin only adds
# `--icdiff-cols` and `--icdiff-show-all-spaces` for tuning).
addopts = [
    "--strict-markers",
    "--strict-config",
    # `--import-mode=importlib` lets paired tests share a basename
    # across mirror trees (e.g., `tests/livespec/schemas/dataclasses/
    # test_finding.py` and `tests/livespec/validate/test_finding.py`)
    # without pytest's legacy `prepend` mode triggering same-basename
    # module collisions. Recommended modern pytest import mode; no
    # `__init__.py` files needed in the `tests/` tree.
    "--import-mode=importlib",
]
markers = [
    "mock_only: test runs only in mock tier (LIVESPEC_E2E_HARNESS=mock); skipped in real tier",
    "e2e_golden: flagship multi-turn dialogue e2e test; per li-949's Q2 hybrid prompt strategy, the real-tier recipe runs golden tests in addition to the single-shot happy-path tests",
    "integration: integration-tier test (drives a check/CLI out-of-process via subprocess); satisfies the scenarios.md integration-tier requirement in tests/heading-coverage.json (AST-detected by check-heading-coverage)",
]

# ---------------------------------------------------------------------------
# Coverage — 100% line + branch (per SPECIFICATION/constraints.md
# §"Code coverage" and SPECIFICATION/spec.md §"Definition of Done").
# ---------------------------------------------------------------------------

[tool.coverage.run]
branch = true
# Coverage uses an `omit`-only blocklist (no `source` allowlist).
# The dev-tooling/checks/ test suite invokes check scripts via
# `subprocess.run` with `cwd=tmp_path`; pytest-cov's pth-installed
# startup hook instruments those children, but a relative `source`
# list (e.g., `dev-tooling`) resolves against the subprocess's
# cwd (the tmp_path), which doesn't contain `dev-tooling/`, so
# the actual `<repo>/dev-tooling/checks/<name>.py` would be
# silently dropped from the report. Removing `source` entirely
# lets every imported module be measured, then the `omit` patterns
# below filter out everything that isn't first-party livespec
# code:
#
#   - `*/_vendor/*` — vendored third-party libs (returns,
#     structlog, jsonschema, typing_extensions); matches both
#     relative (`./.claude-plugin/scripts/_vendor/...`) and
#     absolute (`/abs/path/_vendor/...`) forms via the leading
#     `*/` prefix. The carve-out matches `[tool.ruff].extend-exclude`
#     and `[tool.pyright].exclude` above.
#   - `*/.venv/*` — the project-local venv (uv/pytest-cov
#     transitive imports under .venv/lib/...).
#   - `*/site-packages/*` — defense-in-depth for stdlib /
#     installed-pkg paths in case the venv is named differently.
#   - `*/__pycache__/*` — bytecode cache (shouldn't appear in
#     measurement, but matches the pyright/ruff exclude pattern).
#
# The `tests/` tree isn't omitted: pytest-cov already excludes
# test files from measurement by default (it instruments the code
# under test, not the test code itself).
omit = [
    "*/_vendor/*",
    "*/.venv/*",
    "*/site-packages/*",
    "*/__pycache__/*",
    # E2E and prompt-QA test infrastructure is excluded from coverage
    # per SPECIFICATION/contracts.md §"E2E harness contract" and
    # §"Prompt-QA harness contract §"Python-rule compliance". (The
    # former tests/e2e-cli/ CLI end-to-end tier relocated to the
    # livespec-driver-claude repo together with the skill bindings.)
    "tests/e2e/*",
    "tests/prompts/*",
    # pytest tmp_path fixture directories — test helpers written into
    # /tmp/pytest-*/... (Linux) or /private/var/folders/.../T/pytest-*/...
    # (macOS) are test scaffolding, not first-party code.
    "/tmp/*",
    "/private/var/folders/*",
    # mutmut working directory — instrumented copies of source files;
    # measured during mutation testing but not first-party code.
    "mutants/*",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = false
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "raise ImportError",
    "@overload",
    # Main guard — never executed via pytest; covered by the
    # shebang-wrapper meta-test pattern where applicable.
    "if __name__ == .__main__.:",
    # Vendored-path guard — `if str(X) not in sys.path: sys.path.insert(...)`.
    # Already in sys.path when tests run via pyproject.toml `pythonpath`
    # config; the sys.path.insert branch is structurally dead in tests.
    "sys.path.insert",
    # `case _:` arms are structurally unreachable by spec mandate:
    # python-skill-script-style-requirements.md lines 1054-1066
    # require every `match` statement to terminate with
    # `case _: assert_never(<subject>)`, and
    # `dev-tooling/checks/assert_never_exhaustiveness.py` enforces
    # the body is `assert_never(<subject>)` and nothing else. The
    # arm is therefore unreachable when the subject's declared type
    # is exhaustively handled by the prior arms (the universal
    # case in this codebase). Excluding the line excludes the
    # indented body too via coverage.py's compound-statement rule,
    # which dismisses the `assert_never` line in the same sweep.
    # Style-doc paired update extends the structural-exclusion
    # enumeration from 3 patterns to 4.
    "case _:",
    # Red-Green-Replay tests may include defensive failure branches
    # that must be unreachable once the Green implementation lands;
    # test bytes are frozen across Red -> Green, so the exclusion
    # must live here instead of on the Red test line.
    'raise AssertionError\(f"help must not map to UsageError:',
]

# ---------------------------------------------------------------------------
# Import-Linter — two authoritative contracts (v013 M7, narrowed by v017 Q3).
# ---------------------------------------------------------------------------

[tool.importlinter]
root_packages = ["livespec"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "parse-and-validate-are-pure"
type = "forbidden"
source_modules = ["livespec.parse", "livespec.validate"]
# Two style-doc-listed forbids are intentionally absent (see the
# style doc overlay note below the contract block):
#   - returns.io: import-linter v2 rejects subpackages of external
#     packages. IOResult/IOFailure misuse in pure layers is caught
#     at raise-site by check-no-raise-outside-io.
#   - pathlib: livespec.types defines `SpecRoot = NewType("SpecRoot",
#     Path)`, which forces a runtime pathlib import that flows
#     transitively into pure layers via the wire dataclasses. The
#     no-I/O-at-runtime intent is caught by check-no-write-direct
#     and the supervisor-discipline / no-raise-outside-io AST
#     checks, none of which fire on import-for-typing alone. Per
#     the style doc's architecture-vs-mechanism principle, this
#     reassignment is permitted.
forbidden_modules = [
    "livespec.io",
    "subprocess",
    "socket",
    "http",
    "urllib",
]

[[tool.importlinter.contracts]]
name = "layered-architecture"
type = "layers"
layers = [
    "livespec.commands | livespec.doctor",
    "livespec.io",
    "livespec.validate",
    "livespec.parse",
]

# ---------------------------------------------------------------------------
# Mutmut — runtime config ONLY. Per SPECIFICATION/spec.md §"Mutation
# testing as release-gate": NO threshold key here. The
# ratchet-with-ceiling semantics (floor = baseline_kill_rate, capped at 80%)
# live entirely in `just check-mutation`, which reads .mutmut-baseline.json
# and computes the floor at runtime.
#
# NESTED-LAYOUT NOTE (epic livespec-mutreal, item livespec-mutreal.1).
# livespec's package lives at the nested path
# `.claude-plugin/scripts/livespec/`, not at a flat import root or under
# `src/`. mutmut 3.2.3 assumes flat-or-`src/`: it derives each mutant's KEY
# from the dotted FILE PATH (stripping only a literal `src.` prefix) while
# the runtime trampoline records hits keyed by the import MODULE NAME. From
# the repo root those namespaces never intersect
# (`.claude-plugin.scripts.livespec.validate.X` vs. `livespec.validate.X`),
# so EVERY mutant is unkillable and the run records 0 mutants — the silent
# no-op this epic fixes.
#
# The validated fix runs mutmut with cwd = an IMPORT-ROOT staging dir whose
# `livespec/` is the package (so file-path-dotted == module name → keys
# match) and whose `.claude-plugin/` + paired-test subtree satisfy the
# root-relative fixture reads (`Path(__file__).resolve().parents[3] /
# ".claude-plugin" / ...`) without dragging in the whole `tests/` tree (whose
# `commands/` modules import source mutmut never copies → the ModuleNotFound
# collection failure). The two paired-test fragilities handled in the same
# leg: the one `inspect.getsource`-based test in
# `tests/livespec/parse/test_front_matter.py` is guarded with
# `@pytest.mark.skipif(os.environ.get("MUTANT_UNDER_TEST"), ...)` (mutmut
# prepends trampoline boilerplate so the first-line pragma assertion cannot
# hold under instrumentation), and the validate fixtures' support closure
# (`livespec/{__init__,errors,types,context}.py`, `livespec/schemas/`,
# `.claude-plugin/specification-templates/`) is copied into `mutants/`.
#
# Measured locally (LIVESPEC_RUN_MUTATION=true) over `parse/` + `validate/`:
# 201 mutants, 182 killed, 19 survived → 90.55% kill rate (≥ the 80% floor).
#
# `paths_to_mutate` below names the pure-logic core. `tests_dir` is a
# mutmut-2.x vestige (ignored by 3.x; the `tests/` copy is unconditional)
# and is retained only as documentation of the paired-test scope.
# ---------------------------------------------------------------------------

[tool.mutmut]
paths_to_mutate = [
    ".claude-plugin/scripts/livespec/parse",
    ".claude-plugin/scripts/livespec/validate",
]
runner = "uv run pytest -x -q"
tests_dir = "tests"
